fix(info-panel): fix overflow issue

--- a/src/modules/info-panel/info-panel.css
+++ b/src/modules/info-panel/info-panel.css
@@ -41,5 +41,5 @@ info-panel {
 }
 
 .info-panel-section {
-    height: 100%;
+    height: calc(100% - 2rem);
 }
